# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appveyor.yml  assignment.hpp  graphics_payload.json  main.cpp
.github/workflows/: main.yml
hypercube_app/: app.py  combine.py  create_slabs.py
hypercube_app/job/: render.sh  scene.json
include/: CMakeLists.txt  paths.hpp
include/BRDFs/: BRDF.hpp  CMakeLists.txt  SV_lambertian.hpp  glossy_specular.hpp  lambertian.hpp  perfect_specular.hpp
include/BTDFs/: BTDF.hpp  CMakeLists.txt  perfect_transmitter.hpp
include/cameras/: CMakeLists.txt  camera.hpp  pinhole.hpp
include/integrators/: CMakeLists.txt  SPPMIntegrator.hpp
include/lights/: CMakeLists.txt  ambient.hpp  ambient_occlusion.hpp  directional.hpp  light.hpp  point_light.hpp
include/materials/: CMakeLists.txt  SV_matte.hpp  material.hpp  matte.hpp  phong.hpp  reflective.hpp  transparent.hpp
include/objects/: CMakeLists.txt  mesh.hpp  object.hpp  plane.hpp  smooth_uv_triangle.hpp  sphere.hpp  torus.hpp  triangle.hpp
include/samplers/: CMakeLists.txt  jittered.hpp  sampler.hpp
include/structures/: CMakeLists.txt  KDTree.hpp  ShadeRec.hpp  bounds.hpp  photon.hpp  scene_slab.hpp  shade_rec.hpp  surface_interaction.hpp  view_plane.hpp  world.hpp
include/textures/: CMakeLists.txt  constant_colour.hpp  image_texture.hpp  mapping.hpp  texture.hpp
include/tracers/: CMakeLists.txt  tracer.hpp  whitted_tracer.hpp
include/types/: atlas_types.hpp
include/utilities/: CMakeLists.txt  parser.hpp  paths.hpp  paths.hpp.in  utilities.hpp
scenes/: graphics_payload.json  mesh_scene.json  photon_scene.json
source/: CMakeLists.txt  main.cpp
source/BRDFs/: CMakeLists.txt  SV_lambertian.cpp  glossy_specular.cpp  lambertian.cpp  perfect_specular.cpp
source/BTDFs/: CMakeLists.txt  perfect_transmitter.cpp
source/cameras/: CMakeLists.txt  pinhole.cpp
source/integrators/: CMakeLists.txt  SPPMIntegrator.cpp
source/lights/: CMakeLists.txt  ambient.cpp  ambient_occlusion.cpp  directional.cpp  light.cpp  point_light.cpp
source/materials/: CMakeLists.txt  SV_matte.cpp  material.cpp  matte.cpp  phong.cpp  reflective.cpp  transparent.cpp
source/objects/: CMakeLists.txt  mesh.cpp  plane.cpp  smooth_uv_triangle.cpp  sphere.cpp  torus.cpp  triangle.cpp
source/samplers/: CMakeLists.txt  jittered.cpp
source/structures/: CMakeLists.txt  KDTree.cpp  bounds.cpp  photon.cpp  scene_slab.cpp  shade_rec.cpp  surface_interaction.cpp
source/textures/: CMakeLists.txt  constant_colour.cpp  image_texture.cpp
source/tracers/: CMakeLists.txt  tracer.cpp  whitted_tracer.cpp
source/utilities/: CMakeLists.txt  parser.cpp  utilities.cpp
tests/: CMakeLists.txt  test_objects.cpp
