add_subdirectory(BRDFs)
add_subdirectory(BTDFs)
add_subdirectory(cameras)
add_subdirectory(lights)
add_subdirectory(materials)
add_subdirectory(objects)
add_subdirectory(samplers)
add_subdirectory(structures)
add_subdirectory(textures)
add_subdirectory(tracers)
add_subdirectory(utilities)

set(POLY_INCLUDE_BRDF_GROUP ${POLY_INCLUDE_BRDF_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_BTDF_GROUP ${POLY_INCLUDE_BTDF_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_CAMERA_GROUP ${POLY_INCLUDE_CAMERA_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_LIGHT_GROUP ${POLY_INCLUDE_LIGHT_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_MATERIAL_GROUP ${POLY_INCLUDE_MATERIAL_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_OBJECT_GROUP ${POLY_INCLUDE_OBJECT_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_SAMPLER_GROUP ${POLY_INCLUDE_SAMPLER_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_STRUCTURE_GROUP ${POLY_INCLUDE_STRUCTURE_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_TEXTURE_GROUP ${POLY_INCLUDE_TEXTURE_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_TRACER_GROUP ${POLY_INCLUDE_TRACER_LIST} PARENT_SCOPE)
set(POLY_INCLUDE_UTILITY_GROUP ${POLY_INCLUDE_UTILITY_LIST} PARENT_SCOPE)