add_subdirectory(BRDFs)
add_subdirectory(BTDFs)
add_subdirectory(cameras)
add_subdirectory(lights)
add_subdirectory(materials)
add_subdirectory(objects)
add_subdirectory(samplers)
add_subdirectory(structures)
add_subdirectory(textures)
add_subdirectory(tracers)
add_subdirectory(utilities)

set(POLY_SOURCE_BRDF_GROUP ${POLY_SOURCE_BRDF_LIST} PARENT_SCOPE)
set(POLY_SOURCE_BTDF_GROUP ${POLY_SOURCE_BTDF_LIST} PARENT_SCOPE)
set(POLY_SOURCE_CAMERA_GROUP ${POLY_SOURCE_CAMERA_LIST} PARENT_SCOPE)
set(POLY_SOURCE_LIGHT_GROUP ${POLY_SOURCE_LIGHT_LIST} PARENT_SCOPE)
set(POLY_SOURCE_MATERIAL_GROUP ${POLY_SOURCE_MATERIAL_LIST} PARENT_SCOPE)
set(POLY_SOURCE_OBJECT_GROUP ${POLY_SOURCE_OBJECT_LIST} PARENT_SCOPE)
set(POLY_SOURCE_SAMPLER_GROUP ${POLY_SOURCE_SAMPLER_LIST} PARENT_SCOPE)
set(POLY_SOURCE_STRUCTURE_GROUP ${POLY_SOURCE_STRUCTURE_LIST} PARENT_SCOPE)
set(POLY_SOURCE_TEXTURE_GROUP ${POLY_SOURCE_TEXTURE_LIST} PARENT_SCOPE)
set(POLY_SOURCE_TRACER_GROUP ${POLY_SOURCE_TRACER_LIST} PARENT_SCOPE)
set(POLY_SOURCE_UTILITY_GROUP ${POLY_SOURCE_UTILITY_LIST} PARENT_SCOPE)